<resources>
    <string name="app_name">CNS RTM</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Sign In</string>
    <string name="please_wait">Please Wait</string>
    <string name="fetching">Fetching Data…</string>
    <string name="check_internet">Check your internet connection.</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="enter_all_fields">Please input all the fields.</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="airport_authority_of_india">Airports Authority of India</string>
    <string name="no_item">No item available.</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="proceed">Proceed</string>
    <string name="admin">Admin</string>
    <string name="delhi_airport">Delhi Airport</string>
    <string name="equipments">Equipments</string>
    <string name="all_items">All items</string>
    <string name="remember_me">Remember me</string>
    <string name="request_spare">Request Spare</string>
    <string name="requests">Requests</string>
    <string name="press_again_exit_app">Press again to exit app</string>
    <string name="serial_number">Serial Number</string>
    <string name="spare_id">Spare ID</string>
    <string name="warranty_in_days">Warranty (in days)</string>
    <string name="create_service">Create Service</string>
    <string name="service_status">Service Status</string>
    <string name="service_days">Service Days</string>
    <string name="choose">Choose Option</string>
    <string name="view_all">View all options</string>
    <string name="sign_as_admin">Sign in as admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_email">Enter Email</string>
    <string name="input_email_content">Email will be send at this address.</string>
    <string name="input_email_hint">abc@xyz.com</string>
    <string name="input_prefill"></string>
    <string name="logout">Logout</string>
    <string name="airports_authority">Airports Authority</string>
</resources>
