<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            android:title="@string/airport_authority_of_india"
            app:popupTheme="@style/AppTheme.PopupOverlay">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/csbackground"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_ahalf_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_ahalf_horizontal_margin"
                android:text="Fill Information"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    style="@style/CSInput"
                    android:id="@+id/etSerial"
                    android:layout_width="0dp"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/serial_number"
                    android:padding="12dp"
                    android:textSize="12sp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    style="@style/CSInput"
                    android:id="@+id/etSpareID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spare_id"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    style="@style/CSInput"
                    android:id="@+id/etWarranty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/warranty_in_days"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    android:id="@+id/etInspection"
                    style="@style/CSInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="Inspection Cycle (in days)"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    android:id="@+id/etPurchaseDate"
                    style="@style/CSInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="Purchase date"
                    android:onClick="onClick"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    style="@style/CSInput"
                    android:id="@+id/etStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/service_status"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_ahalf_horizontal_margin">

                <EditText
                    style="@style/CSInput"
                    android:id="@+id/etServiceDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/service_days"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnDone"
            style="@style/ButtonOrange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="Done"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
