<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.mtechviral.cnsrtm.databinding.User"/>
        <variable
            name="activity"
            type="com.mtechviral.cnsrtm.activities.SignInActivity"/>
    </data>


    <RelativeLayout
        android:id="@+id/activity_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/airportView"
            android:src="@drawable/airport"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/button_blue" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="46dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/inputCont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="160dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                style="@style/LoginStyle"
                                android:layout_marginTop="50dp"
                                android:text="@={user.username}"
                                android:hint="@string/enter_username" />

                            <EditText
                                style="@style/LoginStyle"
                                android:hint="@string/enter_password"
                                android:text="@={user.password}"
                                android:inputType="textPassword" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/activity_horizontal_margin">

                                <CheckBox
                                    android:id="@+id/cbRemember"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="50dp"
                                    android:text="@string/remember_me"
                                    android:textColor="@color/logintext"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/txtForgotPassword"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:text="Forgot Password"
                                    android:visibility="invisible"
                                    android:textColor="@color/logintext"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/inputCont"
                    android:layout_marginBottom="-200dp"
                    app:srcCompat="@drawable/aai" />

                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/ButtonOrange"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:onClick="@{()->activity.onLoginClicked(user.username,user.password)}"
                    android:layout_below="@+id/inputCont"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textAllCaps="false"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />



            </RelativeLayout>

        </ScrollView>
        <Button
            android:id="@+id/btnSignUp"
            style="@style/ButtonWhite"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/sign_up"
            android:visibility="gone"
            android:textAllCaps="false" />

    </RelativeLayout>
</layout>
